# EasyEffects-Windows-Porting

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  QUICK_START.md  README.md
docs/: Architecting Windows-Native EasyEffects Port.md  Prompt.md  audio_flow_diagram.md  implementation_plan.md  juce_architecture.md  lessons_learned.md  roadmap.md  system_routing.md  windows_architecture.md
docs/phase1-8/: failure_analysis.md  implementation_plan(v2).md  original_architecture.md
docs/phase10/: implementation_plan_phase10.md  walkthrough_eq_inspector.md  walkthrough_phase10.md
docs/phase11/: implementation_plan_phase11.md  walkthrough_phase11.md
docs/phase12/: changelog_phase12.md  walkthrough_phase12.md
docs/phase9/: implementation_plan.md  implementation_plan_9b.md  walkthrough_9b_batch1.md  walkthrough_9b_batch2.md  walkthrough_9b_hotfix.md  walkthrough_9c_batch2.md
logs/: ai_context.md  decisions.md  dev_log.md
logs/phase1-8/: dev_log.md
logs/phase10-12/: decisions.md  dev_log.md
logs/phase9/: dev_log.md
scripts/: package_release.ps1
src/: DefaultPresets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: AutoGainModule.cpp  AutoGainModule.h  BandSplitter.h  BassEnhancerModule.cpp  BassEnhancerModule.h  BassLoudnessModule.cpp  BassLoudnessModule.h  ChorusModule.cpp  ChorusModule.h  CompressorModule.cpp  CompressorModule.h  ConvolverModule.cpp  ConvolverModule.h  CrossfeedModule.cpp  CrossfeedModule.h  CrusherModule.cpp  CrusherModule.h  CrystalizerModule.cpp  CrystalizerModule.h  DeesserModule.cpp  DeesserModule.h  DelayModule.cpp  DelayModule.h  EffectChain.cpp  EffectChain.h  EffectModule.h  EffectRegistry.cpp  EffectRegistry.h  EqualizerModule.cpp  EqualizerModule.h  ExciterModule.cpp  ExciterModule.h  ExpanderModule.cpp  ExpanderModule.h  FilterModule.cpp  FilterModule.h  GainModule.cpp  GainModule.h  GateModule.cpp  GateModule.h  (+21 more)
src/ui/: ConvolverEditor.cpp  ConvolverEditor.h  DynamicsVisualizer.cpp  DynamicsVisualizer.h  EQNodeComponent.cpp  EQNodeComponent.h  EQNodeSettingsPanel.cpp  EQNodeSettingsPanel.h  EQPlotComponent.cpp  EQPlotComponent.h  GenericModuleEditor.cpp  GenericModuleEditor.h  LevelMeterEditor.h  ModuleDescriptors.h  SidebarRowCustomComponent.h  SpectrumAnalyzerEditor.h  SpectrumAnalyzerPlaceholder.h  Theme.h  VisualEqualizerEditor.cpp  VisualEqualizerEditor.h  VisualMeterComponent.h
